chore: clean up spacing issues
feat: adjust height of review page header element

feat: refine review page styles

Focus on refactoring media queries for the the transition of the review-submission and review-overview elements.

chore: yarn.lock update

Ran 'yarn upgrade' as I was setting up the project on my new machine resulting in updates to the yarn.lock file.

feat: adjust review header image size

chore: remove WIP comments

feat: remove extra margin around Sparkeats global site header

feat: adjust review page overview address line height

feat: add images to review submission

Update _review-submission.hbs to include images. These images are currently pulled from the place-image data. A TODO: has been included in the code to update the data source to review image data once it is available.

Add styles to _review.scss for images submitted with a review.

feat: adjust review styles

feat: update review submission header

chore: ran yarn upgrade

feat: update reivew submission header styles

Set review submission header height to em's for consistent styling across screen sizes.

feat: update all data references

Update _review-submission.hbs and _review-container.hbs to pull data from refactored places.yml and reviews.yml files.

Refactor image links in the reviews.yml data file.

chore: clean up spaces and comments

style: remove comment and extra lines/spaces

--- a/source/scss/_layout.scss
+++ b/source/scss/_layout.scss
@@ -27,9 +27,6 @@ li:not([class]){
   justify-content: center;
   margin: 0 0 2em 0;
   max-width: 100%;
-  @media (min-width: 27em) {
-    margin: 0 0 3.25em 0;
-  }
   &__logo {
     display: block; //
     background: url(/assets/design/sparkeats_logomark.svg) center no-repeat;
